# trade-category

./: .clang-format  Dockerfile  README.md
regression-test/: input2.txt  output1.expected.txt  output2.expected.txt  test-trade-category.sh
src/: CMakeLists.txt  Conan.cmake
src/lib/: CMakeLists.txt  category.cpp  category.h  trade.cpp  trade.h
src/test/: CMakeLists.txt
